fixed spacing bug in experience section (for mobile & tablet screens)

--- a/style.css
+++ b/style.css
@@ -556,11 +556,13 @@ b {
 
 .quali-item {
 	border-radius: 4px;
-	padding: 0.5rem .8rem;
+	padding-top: .5rem;
+	padding-bottom: .5rem;
+	padding-left: 2rem;
 	overflow: hidden;
 	background: var(--primary-color);
 	color: var(--secondary-color);
-	margin: 0.6rem 0;
+	margin: 1.5rem 0;
 	box-shadow: 0 0 16px -4px rgba(0, 0, 0, 0.75);
 	animation: fadeIn 2s;
 }
@@ -1059,7 +1061,6 @@ textarea {
 		display: grid;
 		grid-template-columns: 25% auto;
 		align-items: center;
-		padding: 1rem;
 		column-gap: 1rem;
 	}
 
@@ -1123,6 +1124,7 @@ textarea {
 		display: grid;
 		grid-template-columns: repeat(2, 1fr);
 		column-gap: 2rem;
+		padding: 0.5rem .8rem;
 	}
 
 	/* Skills */
